--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/howler": "^2.2.11",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.79",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "wavefile": "^11.0.0",
@@ -42,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "prettier": "^3.2.5",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.2",
+    "vitest-fetch-mock": "^0.2.2"
   }
 }
