--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@types/howler": "^2.2.11",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "classnames": "^2.3.2",
+    "dsp.js": "^1.0.1",
     "howler": "^2.2.4",
+    "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.71.1",
+    "seed-random": "^2.2.0",
     "typescript": "^4.9.5",
     "wavefile": "^11.0.0",
     "web-vitals": "^2.1.4"
@@ -41,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/seed-random": "^2.2.4",
     "@vitejs/plugin-react": "^4.2.1",
     "prettier": "^3.2.5",
     "vite-tsconfig-paths": "^4.3.1",
