--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "baseUrl": ".",
   },
   "include": [
-    "src"
+    "src",
+    "node_modules/dsp.js/dsp.js"
   ]
 }
